crates/swc_css_parser/tests/errors/percent/dot/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/percent/dot/input.css:1:12
  |
1 | a { width: 0.%; }
  |            ^^^

